--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -62,7 +62,7 @@ javac.test.modulepath=${javac.modulepath}
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
 javac.target=1.8
-platform.active=JDK_8
+platform.active=default_platform
 manifest.file=manifest.mf
 javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
